--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
                   mavenCentral()
               }
               dependencies {
-                  classpath 'com.android.tools.build:gradle:7.0.4'
+                  classpath 'com.android.tools.build:gradle:8.1.1'
               }
           }
 
@@ -54,15 +54,15 @@ jobs:
           cat > app/build.gradle <<EOL
           plugins {
               id 'com.android.application'
-              id 'kotlin-android'
+              id 'org.jetbrains.kotlin.android' version '1.9.10'
           }
 
           android {
-              compileSdk 30
+              compileSdk 33
               defaultConfig {
                   applicationId "com.example.myapp"
                   minSdk 21
-                  targetSdk 30
+                  targetSdk 33
                   versionCode 1
                   versionName "1.0"
               }
@@ -83,7 +83,7 @@ jobs:
           EOL
 
           # 初始化 Gradle Wrapper
-          gradle wrapper --gradle-version 7.0
+          gradle wrapper --gradle-version 8.1.1
 
           # 创建 MainActivity.kt
           cat > app/src/main/java/com/example/myapp/MainActivity.kt <<EOL
@@ -190,7 +190,6 @@ jobs:
           ./gradlew assembleDebug
 
       # Step 4: Upload the APK
-      - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
           name: debug-apk
