--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,29 +19,7 @@ jobs:
         distribution: 'temurin'
         java-version: '17'
 
-    # 先创建 Gradle 配置文件
-    - name: Create build.gradle
-      run: |
-        cat > build.gradle << 'EOL'
-        buildscript {
-            repositories {
-                google()
-                mavenCentral()
-            }
-            dependencies {
-                classpath "com.android.tools.build:gradle:8.1.0"
-                classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-            }
-        }
-        
-        allprojects {
-            repositories {
-                google()
-                mavenCentral()
-            }
-        }
-        EOL
-
+    # 创建修改后的 settings.gradle
     - name: Create settings.gradle
       run: |
         cat > settings.gradle << 'EOL'
@@ -51,25 +29,37 @@ jobs:
                 mavenCentral()
                 gradlePluginPortal()
             }
+            plugins {
+                id 'com.android.application' version '8.1.0'
+                id 'org.jetbrains.kotlin.android' version '1.8.0'
+            }
         }
+
         dependencyResolutionManagement {
-            repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+            repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
             repositories {
                 google()
                 mavenCentral()
             }
         }
-        
+
         rootProject.name = "AList App"
         include ':app'
+        EOL
+
+    # 创建简化后的 build.gradle
+    - name: Create build.gradle
+      run: |
+        cat > build.gradle << 'EOL'
+        // Top-level build file
         EOL
 
     - name: Create app/build.gradle
       run: |
         cat > app/build.gradle << 'EOL'
         plugins {
-            id "com.android.application"
-            id "kotlin-android"
+            id 'com.android.application'
+            id 'org.jetbrains.kotlin.android'
         }
         
         android {
@@ -99,13 +89,13 @@ jobs:
         }
         
         dependencies {
-            implementation "androidx.core:core-ktx:1.12.0"
-            implementation "androidx.appcompat:appcompat:1.6.1"
-            implementation "com.google.android.material:material:1.11.0"
+            implementation 'androidx.core:core-ktx:1.12.0'
+            implementation 'androidx.appcompat:appcompat:1.6.1'
+            implementation 'com.google.android.material:material:1.11.0'
         }
         EOL
 
-    # 然后下载并初始化 Gradle
+    # 下载并初始化 Gradle
     - name: Setup Gradle
       run: |
         wget https://services.gradle.org/distributions/gradle-8.2-bin.zip
